--- a/public/bootflat/scss/bootflat.scss
+++ b/public/bootflat/scss/bootflat.scss
@@ -1,18 +1,5 @@
 @charset "UTF-8";
 
-/*
- * Copyright 2013 FLATHEMES.
- *
- * Bootflat, v2.0.0
- * A open source Flat UI KIT based on Twitter Bootstrap 3.1.0 css framework. 
- * http://http://bootflat.github.io/
- *
- * By @flathemes
- *
- * Licensed under the MIT license. Please see LICENSE for more information.
- *
- */
-
 @import
 
   // Variables, Extends, Mixins
@@ -30,7 +17,12 @@
   "bootflat/pagination",
   "bootflat/pager",
   "bootflat/form",
+  "bootflat/stepper",
+  "bootflat/selecter",
   "bootflat/checkbox_radio",
+  "bootflat/toggle",
+  "bootflat/calendar",
+  "bootflat/pricing",
   "bootflat/alert",
   "bootflat/tab",
   "bootflat/pill",
@@ -44,4 +36,5 @@
   "bootflat/panel",
   "bootflat/accordion",
   "bootflat/footer",
+  "bootflat/timeline",
   "bootflat/dropdown";
